# arcaflow-plugin-wait

./: .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  wait.yaml  wait_plugin.py
.github/workflows/: build.yaml  carpenter.yaml  carpenter_build.yaml  carpenter_push.yaml  workflow.yaml
arcaflow_plugin_wait/: arcaflow_plugin_wait.py
tests/: test_arcaflow_plugin_wait.py  test_wait_plugin.py
