[tool.poetry]
name = "arcaflow-plugin-wait"
# Do not change, the version is automatically updated in CI.
version = "0.0.0"
description = "Python Wait Plugin for Arcaflow"
authors = []
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
homepage = "https://github.com/arcalot/arcaflow-plugin-wait"
packages = [
   { include="wait_plugin.py", from="."  },
]
include = [
   { path="docker-compose.yaml", format="sdist" },
   { path="wait.yaml", format="sdist" },
   { path="tests", format="sdist" },
   { path="poetry.lock", format="sdist" },
   { path="Dockerfile", format="sdist" },
]

[tool.poetry.dependencies]
python = "^3.9"
arcaflow-plugin-sdk = { git = "https://github.com/arcalot/arcaflow-plugin-sdk-python.git", branch = "signals" } #"^0.9.0"

[tool.poetry.dev-dependencies]
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
