[tool.poetry]
name = "arcaflow-plugin-wait"
# Do not change, the version is automatically updated in CI.
version = "0.0.0"
description = "Python Wait Plugin for Arcaflow"
authors = []
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
homepage = "https://github.com/arcalot/arcaflow-plugin-wait"
packages = [
   { include="wait_plugin.py", from="./arcaflow_plugin_wait"  },
]

[tool.poetry.dependencies]
python = "^3.9"
arcaflow-plugin-sdk = "^0.11.0"

[tool.poetry.dev-dependencies]
coverage = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
